fix(components): make `Select` options readable in dark mode (#1935)
* set explicit background color on options

* add style to make this more findable

* Revert "add style to make this more findable"

This reverts commit d20f7e962e53e00b692a87c7efe0c75784e1f48b.

--- a/packages/components/src/Select/Select.css
+++ b/packages/components/src/Select/Select.css
@@ -23,6 +23,10 @@
   appearance: none;
 }
 
+.select option {
+  background-color: var(--field--background-color);
+}
+
 /**
  * Hides arrow in IE10 and up, the arrow is replaced by a custom font later on
  */
